# MPI_playground

./: .gitignore  README.md
Contest/: CMakeLists.txt
Contest/core/: utils.h
Contest/src/: BeautyAgent.cpp  BeautyAgent.hpp  LamportVectorClock.cpp  LamportVectorClock.hpp  Logger.cpp  Logger.hpp  MessageBroker.cpp  MessageBroker.hpp  Messages.cpp  Messages.hpp  main.cpp
Contest/tests/: tests.cpp
